<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yarnl</string>

    <string name="shortcut_library">Library</string>
    <string name="shortcut_library_long">Pattern Library</string>
    <string name="shortcut_current">Current</string>
    <string name="shortcut_current_long">Current Patterns</string>
    <string name="shortcut_upload">Upload</string>
    <string name="shortcut_upload_long">Upload PDF</string>
    <string name="shortcut_recent">Recent</string>
    <string name="shortcut_recent_long">Most Recent Pattern</string>
</resources>
